@@ -1,5 +1,15 @@
 2012-11-19  Brady Eidson  <beidson@apple.com>
 
+        Remove the source files for NetworkRequest from the repository.
+        They were obsoleted and removed from the project file awhile ago, but I forgot to nuke the source.
+
+        Unreviewed.
+
+        * NetworkProcess/NetworkRequest.cpp: Removed.
+        * NetworkProcess/NetworkRequest.h: Removed.
+
+2012-11-19  Brady Eidson  <beidson@apple.com>
+
         Add 64-bit specializations for atomicIncrement and atomicDecrement
         https://bugs.webkit.org/show_bug.cgi?id=102702
 
